# dlt_poc

./: .gitignore  README.md  check_columns.py  fix_dlt_columns.py  main.py  pyproject.toml
notebooks/: dlt_poc.ipynb  dlt_poc.py  reviewing_updated_table_from_dlt_poc.ipynb  sqlmodel_dlt_poc.ipynb  sqlmodel_dlt_poc.py  sqlmodel_poc.ipynb  sqlmodel_poc.py
